<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mislesevomk.basketballaverageshotcalculator.MainActivity"
    android:background="@drawable/bb">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewMade"
        android:id="@+id/textViewMade"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewRebound"
        android:id="@+id/textViewViewRebound"
        android:layout_below="@+id/editTextThreesMade"
        android:layout_toRightOf="@+id/textViewTotalPoints"
        android:layout_toEndOf="@+id/textViewTotalPoints"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTwosMade"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/zero"
        android:layout_below="@+id/textViewTwoPointers"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextRebound"
        android:inputType="number"
        android:focusable="true"
        android:hint="@string/textViewReboundZeroLBL"
        android:layout_below="@+id/textViewViewRebound"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewAVGMadeLBL"
        android:id="@+id/textViewAVGMadeLBL"
        android:layout_below="@+id/editTextTwosMade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="139dp"
        android:textColor="@android:color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewAVGReboundLBL"
        android:id="@+id/textViewAVGReboundLBL"
        android:layout_below="@+id/textViewAVGMadeLBL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalLBL"
        android:id="@+id/textViewTotalLBL"
        android:layout_below="@+id/textViewAVGReboundLBL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewMadeZeroLBL"
        android:id="@+id/textViewMadeZeroLBL"
        android:layout_above="@+id/textViewAVGReboundLBL"
        android:layout_alignLeft="@+id/textViewReboundZeroLBL"
        android:layout_alignStart="@+id/textViewReboundZeroLBL"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewReboundZeroLBL"
        android:id="@+id/textViewReboundZeroLBL"
        android:layout_below="@+id/textViewMadeZeroLBL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalZeroLBL"
        android:id="@+id/textViewTotalZeroLBL"
        android:layout_below="@+id/textViewReboundZeroLBL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/buttonSubmit"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="38dp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTwoPointers"
        android:id="@+id/textViewTwoPointers"
        android:layout_below="@+id/textViewMade"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewThreePointers"
        android:id="@+id/textViewThreePointers"
        android:layout_below="@+id/textViewMade"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextThreesMade"
        android:focusable="true"
        android:inputType="number"
        android:hint="@string/zero"
        android:layout_above="@+id/textViewAVGMadeLBL"
        android:layout_alignRight="@+id/textViewThreePointers"
        android:layout_alignEnd="@+id/textViewThreePointers"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalPoints"
        android:id="@+id/textViewTotalPoints"
        android:layout_below="@+id/textViewTotalLBL"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalPointsZeroLBL"
        android:id="@+id/textViewTotalPointsZeroLBL"
        android:layout_below="@+id/textViewTotalZeroLBL"
        android:layout_alignLeft="@+id/textViewTotalZeroLBL"
        android:layout_alignStart="@+id/textViewTotalZeroLBL"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalShotsMade"
        android:id="@+id/textViewTotalShotsMade"
        android:layout_below="@+id/textViewTotalPoints"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewTotalShotsMadeZeroLBL"
        android:id="@+id/textViewTotalShotsMadeZeroLBL"
        android:layout_below="@+id/textViewTotalPointsZeroLBL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="@android:color/white"/>
</RelativeLayout>
